re PR rtl-optimization/15761 (internal compiler error: in do_SUBST, at combine.c:446)

PR rtl-optimization/15761
	* cfgloopanal.c (count_strange_loop_iterations,
	count_loop_iterations): Use gen_int_mode instead
	of GEN_INT.

From-SVN: r82811